--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,9 @@
 /vendor
 /node_modules
+/public/node_modules
 /public/storage
 Homestead.yaml
 Homestead.json
-
-# Laravel 4 specific
-bootstrap/compiled.php
-app/storage/
 
 # Laravel 5 & Lumen specific
 bootstrap/cache/
