--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_ENV=local
 APP_DEBUG=true
-APP_KEY=SomeRandomString
+APP_KEY=base64:JEH9QS2myW5nl9txtlIA0FF3CQ0ir1k+VFnvcbQoWNw=
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
