--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:5JNFHXRvayoyvPaR+UjagsMOt4OUZq7Nj3DrqGXHoD8=
+APP_KEY=base64:QwZ1HmyuA0wYb1ivLvkJ46KACmMhDy52BdIkOcfGi1A=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost:8000
+APP_URL=http://localhost
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
