--- a/.env
+++ b/.env
@@ -6,11 +6,11 @@ APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
+DB_HOST=den1.mysql6.gear.host
 DB_PORT=3306
-DB_DATABASE=angularjs_laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=angularjslaravel
+DB_USERNAME=angularjslaravel
+DB_PASSWORD=Nl1AK_Nb3bK_
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
