--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:QwZ1HmyuA0wYb1ivLvkJ46KACmMhDy52BdIkOcfGi1A=
 APP_DEBUG=true
 APP_LOG_LEVEL=debug
-APP_URL=http://localhost
+APP_URL=https://angularjs-laravel.herokuapp.com/
 
 DB_CONNECTION=mysql
 DB_HOST=den1.mysql6.gear.host
